--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(McAfeeChallenge)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(McAfeeChallenge main.cpp candy.cpp candy.h)
+add_executable(McAfeeChallenge test.cpp candy.cpp candy.h)
